--- a/css/scss/module/card/_card.scss
+++ b/css/scss/module/card/_card.scss
@@ -2,6 +2,10 @@
   /* Add shadows to create the "card" effect */
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   transition: 0.3s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
 }
 
 /* On mouse-over, add a deeper shadow */
