--- a/css/scss/modal/_modal.scss
+++ b/css/scss/modal/_modal.scss
@@ -1,3 +1,4 @@
+@import "risk_table_common";
 @import "risk";
 @import "risksign";
 @import "riskassessment-task";
@@ -6,6 +7,8 @@
 @import "photo";
 @import "evaluator";
 @import "riskassessment";
+@import "psychosocial_risks";
+@import "digiai";
 
 .wpeo-modal .modal-container {
   ul, li {
