--- a/css/scss/modal/_risk_table_common.scss
+++ b/css/scss/modal/_risk_table_common.scss
@@ -22,36 +22,40 @@
 
   th:nth-child(1),
   td:nth-child(1) {
-    width: 80px;
+    width: 10%;
     text-align: center;
     vertical-align: middle;
   }
 
   th:nth-child(2),
   td:nth-child(2) {
-    width: 100px;
+    width: 10%;
     text-align: center;
     vertical-align: middle;
   }
 
   th:nth-child(3),
   td:nth-child(3) {
-    width: 300px;
+    width: 15%;
     vertical-align: middle;
   }
 
   th:nth-child(4),
   td:nth-child(4) {
-    width: 40%;
+    width: 15%;
     word-wrap: break-word;
     overflow-wrap: break-word;
   }
 
   th:nth-child(5),
   td:nth-child(5) {
-    width: auto;
+    width: 10%;
   }
 
+  th:nth-child(6),
+  td:nth-child(6) {
+    width: 15%;
+  }
   .cotation-container {
     text-align: center;
   }
@@ -103,6 +107,7 @@
   padding: 10px;
 }
 
+
 .select-risk,
 .select-psychosocial-risk {
   cursor: pointer;
@@ -135,5 +140,12 @@
 
   &:not(:disabled) {
     opacity: 1;
+  }
+}
+
+.psychosocial-risk-table {
+  .selected-cotation {
+    border: 3px solid #000000;
+    box-shadow: none;
   }
 }
